# bevy-t3pw-templatoid

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: CREDITS.md  Level0.tmx  Tiles.aseprite  level0.tmx  level1.tmx  level2.tmx  level3.tmx  level4.tmx  map1.tile-16x16.tmx  map2.tile-16x16.tmx
assets/fonts/: readme.txt
assets/levels/: Level1.tmx
assets/textures/chars/: seedling.aseprite
assets/textures/props/: chakram.aseprite
assets/tiled/: map1.tile-16x16.tmx  map2.tile-16x16.tmx
assets/tiled/tiles/: dg_under_the_castle-10.tsx  dg_under_the_castle-45.tsx
src/: asset_loader.rs  main.rs
src/demo/: animation.rs  level.rs  movement.rs  player.rs
src/game/: animation.rs  mod.rs  movement.rs  player.rs
src/game/level/: bosses.rs  enemies.rs  gameplay_ui.rs  mod.rs  projectiles.rs
src/menus/: credits.rs  game_over.rs  main.rs  pause.rs  settings.rs
src/screens/: gameplay.rs  mod.rs
src/theme/: interaction.rs  palette.rs  widget.rs
src/utils/: cam.rs  collisions_layers.rs  mod.rs  tiled.rs
src/utils/tiled/: mod.rs  shaper.rs
